[package]
name = "derive-regex"
version = "0.2.0"
edition = "2021"
authors = ["TitaniumBrain <titaniumbrain@vivaldi.net>"]
description = "Easily parse a regex into a struct or enum variant"
repository = "https://github.com/TitaniumBrain/derive_regex"
license = "MIT"
keywords = ["derive", "regex"]

[dependencies]
derive-regex-proc-macro = { version = "0.2.0", path = "./derive-regex-proc-macro" }
once_cell = "1.21.1"

[dev-dependencies]
regex = "1.11.1"
