[package]
name = "derive-regex-proc-macro"
version = "0.1.2"
edition = "2021"
authors = ["TitaniumBrain <titaniumbrain@vivaldi.net>"]
description = "proc macro implementation of derive_regex"
repository = "https://github.com/TitaniumBrain/derive_regex"
license = "MIT"
# na keywords to avoid easy discovery

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
regex = "1.11.1"
syn = "2.0.98"
